# WPN114-sampling

./: CMakeLists.txt  README.md  qml_plugin.cpp  wpn114-sampling.pri  wpn114-sampling.pro
qml/: qmldir  sampling.qmltypes
source/: sampler.hpp
source/multisampler/: multisampler.cpp  multisampler.hpp
source/sampler/: sampler.cpp  sampler.hpp
